1.底层代码结构优化，抛弃taskLine文件，使用内存作为任务队列的载体\r\n2.优化修复任队列启动卡死的问题\r\n3.修改超时时间为配置文件中定义\r\n4.删除hls.json 的配资

--- a/config.json
+++ b/config.json
@@ -4,5 +4,6 @@
   "log_dir": "./logs/",
   "rect_port":  8999,
   "rect_ip":  "0.0.0.0",
-  "task_time": 3600
+  "task_time": 3600,
+  "hls_timeout": 20
 }
